--- a/homework1.css
+++ b/homework1.css
@@ -5,7 +5,7 @@
 .content{
     width:500px;
     margin-top: 100px;
-    margin-left: 350px;
+    margin:auto;
 }
 .btn-primary{
     margin-left:200px;
